# Military-Personnel-Leave-Management-System-MPLMS-

./: .env.example  .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
docs/: APPROVAL_WORKFLOW.md  ARCHITECTURE.md  DEVELOPER_SPEC.md  DOMAIN_MODEL.md  LOCAL_DEV_NO_DOCKER.md  ROADMAP.md  SCHEDULER_ENGINE.md
examples/: personnel_sample.csv
infra/docker/: Dockerfile  README.md  docker-compose.yml
migrations/: env.py
migrations/versions/: 001_initial_schema.py  002_selected_leave_period_id.py  003_personnel_import_fields.py
src/mplms/: __init__.py  cli.py  main.py
src/mplms/api/: __init__.py
src/mplms/bot/: __init__.py  auth.py  database.py  handlers.py  keyboards.py  leave_request_ui.py  main.py  session.py
src/mplms/core/: __init__.py  config.py  database.py  db.py
src/mplms/domain/: __init__.py  enums.py
src/mplms/models/: __init__.py  audit.py  base.py  conflict.py  document.py  leave.py  personnel.py  policy.py  snapshot.py  workflow.py
src/mplms/services/: __init__.py  apply.py  apply_validation.py  audit.py  (+8 more)
tests/: conftest.py  test_apply.py  test_approval_persistence.py  test_audit.py  test_bot_approval.py  test_bot_auth.py  test_bot_e2e_flow.py  test_bot_imports.py  test_bot_leave_request.py  test_bot_personnel_binding.py  test_bot_user_messages.py  test_cli_flow.py  test_cli_smoke.py  test_leave_request_persistence.py  test_leave_request_service.py  test_migrations.py  test_personnel_import.py  test_road_days.py  test_scheduler.py  test_sqlite_schema.py  test_workflow.py
(+3 files in other folders)
