[project]
name = "mplms"
version = "0.1.0"
description = "Military Personnel Leave Management System"
requires-python = ">=3.12"
dependencies = [
    "aiogram>=3.7,<4.0",
    "aiosqlite>=0.20,<1.0",
    "alembic>=1.13,<2.0",
    "apscheduler>=3.10,<4.0",
    "asyncpg>=0.29,<1.0",
    "psycopg[binary]>=3.1,<4.0",
    "pydantic-settings>=2.2,<3.0",
    "sqlalchemy[asyncio]>=2.0,<3.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2,<9.0",
    "pytest-asyncio>=0.23,<1.0",
    "ruff>=0.5,<1.0",
]

[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
asyncio_mode = "auto"
